# x-gpu-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20220126032258_create_user_table.sql  20220326030318_update_user_table.sql  20220326134550_update_user.sql  20220327141528_update_user_id.sql
scripts/: init_db.sh
src/: api.rs  configuration.rs  dto.rs  error.rs  lib.rs  model.rs  response.rs  sql.rs
src/handlers/: mod.rs  user.rs
src/service/: aws.rs  user.rs
src/utils/: jwt.rs
tests/: health_check.rs
