[package]
name = "x-gpu"
version = "0.1.0"
authors = ["pfcoder"]
edition = "2021"
license = "MIT"

[dependencies]
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
dotenv = "0.15"
futures = "0.3.19"
headers = "0.3"
hmac = "0.11"
hyper = "0.14.16"
jsonwebtoken = "7.2"
jwt = "0.15.0"
lazy_static = "1.4"
poem = { version = "1.3.16", features = ["tower-compat", "compression", "cookie", "session"] }
poem-openapi = { version = "1.3.16", features = ["swagger-ui"] }
rayon = "1.5"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
serde_json = "1.0"
sha2 = "0.9"
sqlx = { version = "0.5.10", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
    "offline",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "x-gpu"
path = "src/bin/server.rs"
